# AsyncInterfaceKJW

./: .gitignore  README.md
AsyncKJW/: AsyncKJW.sln  AsyncKJW.vcxproj  AsyncKJW.vcxproj.filters  CMakeLists.txt  dllmain.cpp  pch.h
AsyncKJW/common/: thread_pool.cpp  thread_pool.h  type.h
AsyncKJW/config/: config_manager.cpp  config_manager.h
AsyncKJW/main/: AsyncKJW.cpp  AsyncKJW.h  session.cpp  session.hpp  session.ipp
AsyncKJW/network/: module_info.h
AsyncKJW/network/modules/: serial_handler.cpp  serial_handler.h  tcp_client_handler.cpp  tcp_client_handler.h  tcp_server_handler.cpp  tcp_server_handler.h  udp_handler.cpp  udp_handler.h
Config/: II.ini  udp_runtime.ini
_obj/: AsyncKJW.dll.recipe  AsyncKJWd.dll.recipe  vc143.idb
_obj/AsyncKJW.tlog/: AsyncKJW.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lib64/: AsyncKJWd.exp
